# hyper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Justfile  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  TESTING_TRANSITION_PLAN.md  TODO.md  check_ranges.py  compiler-pipeline-plan.md  naming-analysis-v2.md  pyproject.toml
hyper/content/: EXAMPLES.md  HOOKS.md  README_FEATURES.md  TESTING.md  examples.py  pyproject.toml
hyper/content/tests/: test_computed_fields.py  test_custom_loaders.py  test_loader.py  test_markdown.py  test_meta_hooks.py  test_url_loader.py
python/: README.md  hyperhtml_autohook.pth  pyproject.toml
python/hyper/: __init__.py  _cli.py  decorators.py  helpers.py  html.py
python/hyper/integrations/: __init__.py  _discovery.py  jinja2.py
python/hyperhtml/: __init__.py  _autohook.py  _loader.py  decorators.py  helpers.py
python/hyperhtml/content/: __init__.py  _mixins.py  loader.py  markdown.py
python/hyperhtml/integrations/: __init__.py  _discovery.py  jinja2.py
python/tests/: test_component_runtime.py  test_component_signatures.py  test_decorators.py  test_file_modes.py  test_helpers.py  test_multiline_tags.py  test_render_here.py  test_zero_config_imports.py
python/tests/bench/: README.md  conftest.py  test_escape_bench.py  test_render_bench.py
python/tests/content/: test_complex_scenarios.py  test_computed_fields.py  test_custom_loaders.py  test_loader.py  test_markdown.py  test_meta_hooks.py  test_url_loader.py
python/tests/integrations/: conftest.py  test_django_dte.py  test_fastapi.py  test_flask.py  test_jinja2.py  test_jinja2_django.py  test_litestar.py  test_sanic.py
rust/: Cargo.toml  Justfile
rust/src/: ast.rs  error.rs  html.rs  lib.rs  lower.rs  main.rs  python_module.rs
rust/src/ast/: hyper.rs  mod.rs  python.rs
rust/src/generate/: brace_collector.rs  html_segments.rs  injection_analyzer.rs  mod.rs  output.rs  print.rs  python.rs
rust/src/lower/: builders.rs  mod.rs  render.rs  transform.rs
rust/src/parse/: mod.rs  tokenizer.rs  tree_builder.rs
rust/src/parser/: tokenizer.rs  tree_builder.rs
rust/src/plugins/: analysis.rs  async.rs  async_detect.rs  collect_spread_kwargs.rs  component_control_flow.rs  component_slots.rs  components.rs  context.rs  detect_async.rs  detect_mutable_defaults.rs  detect_slots.rs  helper_detect.rs  mod.rs  mutable_default_detect.rs  mutable_defaults.rs  rename_reserved_keywords.rs  reserved_keyword.rs  slot_detect.rs  slots.rs  spread_kwargs.rs
rust/src/transform/: async_detect.rs  helper_detect.rs  metadata.rs  mod.rs  mutable_default_detect.rs  reserved_keyword.rs  slot_detect.rs  spread_detect.rs  spread_kwargs.rs
rust/tests/: cli_tests.rs  component_definition_tests.rs  component_return_tests.rs  expected_tests.rs  highlight_tests.rs  injection_tests.rs  inspect_attrs.rs  kitchen_sink.expected.json  kitchen_sink.expected.py  kitchen_sink.hyper  metadata_tests.rs  multiline_tag_contract_tests.rs  reserved_keyword_tests.rs
rust/tests/basic/: async.expected.json  async.expected.py  async.hyper  attr_edge_cases.expected.json  attr_edge_cases.expected.py  await_expressions.hyper  boolean.hyper  class_list.expected.json  class_list.expected.py  classes.expected.json  classes.expected.py  complex.expected.py  comprehension.expected.json  comprehension.expected.py  comprehension.hyper  comprehensive.expected.json  comprehensive.expected.py  comprehensive.hyper  data_aria.expected.py  decorators.expected.json  decorators.expected.py  deeply_nested.hyper  empty_elements.expected.json  empty_elements.hyper  empty_minimal.expected.py  escaped_braces.hyper  expression.expected.py  functions.expected.json  functions.expected.py  hello.expected.py  html_entities.expected.json  html_entities.hyper  imports.expected.json  imports.expected.py  keyword_content.expected.json  keyword_content.expected.py  kitchen_sink.expected.json  kitchen_sink.expected.py  kwargs_collector.expected.json  kwargs_collector.expected.py  (+46 more)
rust/tests/common/: mod.rs
rust/tests/components/: complex_types.expected.json  complex_types.expected.py  default_slot.expected.json  default_slot.expected.py  edge_cases.expected.json  edge_cases.expected.py  named_slots.expected.py  named_with_fallback.expected.json  named_with_fallback.expected.py  nested.expected.json  nested.expected.py  props_edge_cases.expected.json  props_edge_cases.expected.py  props_edge_cases.hyper  reserved_keyword_attrs.expected.json  reserved_keyword_attrs.expected.py  reserved_keyword_attrs.hyper  self_closing.expected.json  self_closing.expected.py  self_closing.hyper  simple.expected.py  spread_props.expected.json  spread_props.expected.py  spread_props.hyper  with_slot.expected.py
rust/tests/control_flow/: break_continue.expected.json  break_continue.expected.py  complex_nested.expected.json  complex_nested.expected.py  empty_blocks.expected.py  empty_blocks.hyper  for_loop.expected.json  for_loop.expected.py  if_else.expected.json  if_else.expected.py  loop_patterns.expected.json  loop_patterns.expected.py  match.expected.py  match.hyper  match_guards.expected.json  match_guards.expected.py  match_guards.hyper  try_except.expected.json  try_except.expected.py  while_loop.expected.json  while_loop.expected.py  while_loop.hyper  with.expected.py  with.hyper
rust/tests/errors/: block_in_paragraph.expected.err  invalid_for_syntax.hyper  mismatched_component_tags.hyper  nested_interactive.expected.err  nested_interactive.hyper  nested_unclosed_element.expected.err  nested_unclosed_element.hyper  star_args.expected.err  unclosed_async_for.hyper  unclosed_async_with.hyper  unclosed_class.expected.err  unclosed_def.hyper  unclosed_if.hyper  unclosed_match.hyper  unclosed_try.expected.err  unclosed_while.hyper  unexpected_end.expected.json  unexpected_end.expected.py  void_element_with_children.expected.err
rust/tests/invariants/: bounds.rs  completeness.rs  helpers.rs  html_completeness.rs  main.rs  monotonicity.rs  no_overlap.rs  roundtrip.rs  (+1 more)
rust/transpiler/: Cargo.toml
(+647 files in other folders)
