[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hyper"
version = "0.1.0"
description = "Python framework for hypermedia-driven applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
content = [
    "markdown>=3.10",
    "pyyaml>=6.0",
]

[tool.maturin]
bindings = "bin"
manifest-path = "rust/transpiler/Cargo.toml"
module-name = "hyper"
python-source = "python"
strip = true

[dependency-groups]
dev = [
    "hyper[content]",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "msgspec>=0.20",
    "pydantic>=2.12",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]

[tool.ruff.lint.per-file-ignores]
"playground/**" = ["F821"]
