[project]
name = "hyper"
version = "0.1.0"
description = "Python framework for hypermedia-driven applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
content = [
    "markdown>=3.10",
    "pyyaml>=6.0",
]

[project.scripts]
hyper = "hyper._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyper"]
