[project]
name = "hyper-content"
version = "0.1.0"
description = "Type-safe content loading with automatic validation library detection"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
msgspec = ["msgspec>=0.20"]
pydantic = ["pydantic>=2.12"]
test = [
    "pytest>=9.0",
    "pytest-cov>=6.3",
]
dev = [
    "hyper-content[test,msgspec,pydantic]",
]

