[package]
name = "hyper-transpiler"
version = "0.1.0"
edition = "2021"
description = "Hyper template transpiler - converts .hyper files to Python"
license = "MIT"

[lib]
name = "hyper_transpiler"
path = "src/lib.rs"

[[bin]]
name = "hyper"
path = "src/main.rs"

[[bin]]
name = "accept_expected"
path = "src/bin/accept_expected.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
glob = "0.3"
libtest-mimic = "0.8"

[[test]]
name = "expected_tests"
harness = false
